[package]
name = "based-rollup-driver"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/TatsujinLabs/based-rollup-driver"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chaindexing = "0.1"
alloy = { version = "0.8", features = ["full"] }
serde_json = "1.0"
hex = "0.4"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0.49"
