[package]
name = "based-rollup-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "based-rollup"
path = "src/main.rs"

[dependencies]
based-rollup-core = { path = "../core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5", features = ["derive"] }